<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CarlaDriver</string>
    <string name="title_activity_maps">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="earnings">Earnings</string>
    <string name="requests">Ride In Progress</string>
    <string name="rides">Rides</string>
    <string name="payments">Payments</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="about">About Us</string>
    <string name="logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request">Request</string>
    <string name="header_title">Julie Thomson</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="you_discover_carla">You discover Carla?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="carla">CARLA</string>
    <string name="not_yet_client">Not yet client?</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_to_get_started">Enter your phone to get started</string>
    <string name="next">NEXT</string>
    <string name="sign_in_title">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="code">Code</string>
    <string name="enter_the_code_you_just_received">Enter the code you just received</string>
    <string name="you_did_not_received_the_code">You didn\'t received the code?</string>
    <string name="send">SEND AGAIN</string>
    <string name="france">(+33)</string>
    <string name="spain">(+34)</string>
    <string name="canada">(+1)</string>
    <string name="argentina">(+54)</string>


    <string name="new_account">New Account</string>
    <string name="account_type">Account type</string>
    <string name="one">1</string>
    <string name="step_divider">/</string>
    <string name="two">2</string>
    <string name="steps">STEPS</string>
    <string name="three">3</string>
    <string name="phone_verification">Phone verification</string>
    <string name="code_verification">Code verification</string>
    <string name="account_informations">Account informations</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="driver">DRIVER</string>
    <string name="want_to_join_our_drivers">Want to join our drivers?</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="registration_number">Registration number</string>
    <string name="six">6</string>
    <string name="vehicle_informations">Vehicle informations</string>
    <string name="list_of_documents">List of documents</string>
    <string name="id_card">ID Card</string>
    <string name="license">License</string>
    <string name="vtc_card">VTC Card</string>
    <string name="vtc_insurance">VTC Insurance</string>
    <string name="gray_card">Gray card</string>
    <string name="criminal_record_extract">Criminal record extract</string>
    <string name="kbis_extract">KBIS Extract</string>
    <string name="upload_front_view">Upload front view</string>
    <string name="save">SAVE</string>
    <string name="documents">Documents</string>
    <string name="id_card_label">( ID Card )</string>
    <string name="acceptance">Acceptance</string>
    <string name="i_have_a_vtc_license">I have a VTC License</string>
    <string name="i_have_read_and_accept_the">I have read and accept the</string>
    <string name="terms_of_use"> terms of use </string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="terms">Terms of use</string>
    <string name="terms_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="phone_can_not_be_empty">Phone can not be empty!</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="empty_field">Please fill all the form!</string>
    <string name="select_picture">Select picture</string>
    <string name="checking_your_number">Checking your number...</string>
    <string name="picture_required">Picture required!</string>
    <string name="app_foldername">Carla</string>
    <string name="pictures_folder">Pictures</string>
    <string name="pdf">(pdf)</string>
    <string name="successfully_upload">Your file has been successfully uploaded</string>
    <string name="some_document_are_missing">Seems like some documents are missing</string>
    <string name="uploading_data">Uploading data...</string>
    <string name="registration_in_progress">Registration in progress...</string>
    <string name="message">Message</string>
    <string name="successfully_registration">Successfully registration! You will receive an email after checking your data</string>
    <string name="you_must_accept_terms">You must accept terms of use</string>
    <string name="your_phone_not_recongnized">Sorry, we don\'t recognized your phone</string>
    <string name="gains">Gains</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="your_account_not_activated">Your account is not yet activated, you will be noticed by mail soon!</string>
    <string name="sign_in_progress">Connection in progress...</string>
    <string name="switch_to_get_online">Switch to get online</string>
    <string name="hello_wilfried">Hello, Wilfried</string>
    <string name="stats">YOUR STATS</string>
    <string name="last_ride">Last ride :</string>
    <string name="monday">2018/11/10 at 12:45</string>
    <string name="zero">0</string>
    <string name="hundred">100</string>
    <string name="unknown_location">Unknown location</string>
    <string name="you_are_online">You are now online. Now all clients can call you.</string>
    <string name="you_are_offline">You are offline.</string>
    <string name="default_notification_channel_id">carla-driver-channel</string>
    <string name="new_request">New Request</string>
    <string name="james" tools:ignore="MissingTranslation">James Franco</string>

    <string name="pricing">Pricing</string>
    <string name="address">15 rue du progres 93100, Montreuil, France</string>
    <string name="distance">Distance</string>
    <string name="distance_value">222 mi</string>
    <string name="duration_label">3h25min</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="price_label" tools:ignore="MissingTranslation">15 €</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="without_action_the_request_will_be_automatically_rejected">Without action, the request will be automatically rejected</string>
    <string name="sending_your_response">Sending your response...</string>
    <string name="request_report">Request report</string>
    <string name="request_accepted">Wohoo! Your request has been accepted by the dirver, he will come soon.</string>
    <string name="request_rejected">Oooh! We are sorry, the driver has rejected your request!</string>
    <string name="response_successfull">Your response has been successfully sent to the client!</string>
    <string name="error">Seems like it was an error, please try again!</string>
    <string name="ride">Ride</string>
    <string name="preferred_gps">Preferred Gps</string>
    <string name="google_map">Google Map</string>
    <string name="waze">Waze</string>
    <string name="pick_up_client">PICK UP CLIENT</string>
    <string name="start_ride">START RIDE</string>
    <string name="end_ride">END RIDE</string>
    <string name="sorry_you_don_t_have_any_ride_in_progress">Sorry, you don\'t have any ride in progress!</string>
    <string name="please_check">Please select a checkbox before pick up</string>
    <string name="your_phone_not_recognized">Your phone is not recognized!</string>
    <string name="reached_to_client">Reached to client</string>
    <string name="ride_ended">Your ride is ended, please take a time to note the driver</string>
    <string name="driver_reach">Your driver reached at the starting point</string>
    <string name="you_won">Wohoo!, you won</string>
    <string name="updating_data">Update in progress...</string>
    <string name="amount">Amount</string>
    <string name="no_rides">You don\'t have any ride</string>
    <string name="no_messages">You don\'t have any message</string>
    <string name="no_payments">You don\'t have any payment</string>
    <string name="date">Date</string>
    <string name="month">Month gains : </string>
    <string name="day">Day gains : </string>
    <string name="weekly">Week gains : </string>
    <string name="carla_driver">DRIVER</string>
    <string name="version">Version 1.0</string>
</resources>
