<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_rides"
            android:title="@string/rides" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_request"
            android:title="@string/ride" />
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/ic_earnings"
            android:title="@string/earnings" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_payments"
            android:title="@string/payments" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/messages"
            app:actionLayout="@layout/menu_count" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>