<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpVehicleFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvDocuments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/list_of_documents" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chbIdCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/id_card" />

            <CheckBox
                android:id="@+id/chbLicence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/license" />

            <CheckBox
                android:id="@+id/chbVtcCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/vtc_card" />

            <CheckBox
                android:id="@+id/chbVtcInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/vtc_insurance" />

            <CheckBox
                android:id="@+id/chbGrayCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/gray_card" />

            <CheckBox
                android:id="@+id/chbRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/criminal_record_extract" />

            <CheckBox
                android:id="@+id/chbKbis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:textSize="15sp"
                android:text="@string/kbis_extract" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="16dp"
                   android:textSize="15sp"
                   android:text="@string/upload_front_view" />

               <TextView
                   android:id="@+id/txtTitle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="8dp"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:textStyle="bold"
                   android:text="@string/id_card_label" />

           </LinearLayout>

            <include layout="@layout/layout_upload" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/background_button_primary_rounded"
                android:layout_marginTop="32dp"
                android:text="@string/save" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@drawable/background_button_primary_rounded"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/next" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>