<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_splash"
    tools:context=".activities.SplashActivity">


    <LinearLayout
        android:id="@+id/lnlAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:text="@string/carla" />

        <TextView
            android:id="@+id/app_name_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/driver" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/already_have_an_account" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_secondary_rounded"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/want_to_join_our_drivers" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_flat_rounded"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/sign_up" />

    </LinearLayout>

</RelativeLayout>