<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpVehicleFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/chbVtc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:text="@string/i_have_a_vtc_license" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">

            <CheckBox
                android:id="@+id/chbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/i_have_read_and_accept_the" />

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:text="@string/terms_of_use" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_primary_rounded"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>