<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".fragments.SignUpPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/enter_your_phone_to_get_started"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">

            <FrameLayout
                android:id="@+id/spnCountryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginEnd="4dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@drawable/background_spinner" />

                <Spinner
                    android:id="@+id/spnCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"/>

            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="4"
                android:background="@drawable/background_edittext">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext_no_border"
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:hint="@string/phone" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_primary_rounded"
            android:layout_marginTop="32dp"
            android:text="@string/next" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_secondary_rounded"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in" />

    </LinearLayout>

</RelativeLayout>