<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpVehicleFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtBrandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/brand" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtModelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/model" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtYearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/year" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtRegistrationNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext">

            <EditText
                android:id="@+id/edtRegistrationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext_no_border"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/registration_number"
                tools:ignore="TextFields" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/background_button_primary_rounded"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/next" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>